fix: wrap Swiper in responsive container to improve layout handling for mobile

--- a/packages/gallery/src/components/image-viewer/index.module.css
+++ b/packages/gallery/src/components/image-viewer/index.module.css
@@ -69,7 +69,7 @@
         z-index: -1000;
     }
 
-    .swiper {
+    .swiperFrame {
         display: flex;
         width: 100%;
         height: 100%;
@@ -86,6 +86,15 @@
         &.mobileVideo {
             max-height: 100vh;
         }
+    }
+
+    .swiper {
+        width: 100%;
+        height: 100%;
+    }
+
+    .hidden {
+        display: none;
     }
 
     .singleSlideContainer {
@@ -105,10 +114,6 @@
         &.mobileVideo {
             max-height: 100vh;
         }
-    }
-
-    .hidden {
-        display: none;
     }
 
     .slide {
